--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KAdmin</title>
+    <!-- <script src="//at.alicdn.com/t/c/font_3900860_lb6wadlzv7b.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
